--- a/default.properties
+++ b/default.properties
@@ -1,4 +1,5 @@
 development.cluster_name=k8s-demo-development
+development.ssh_key_pair_name=k8s-demo-development-key
 development.cidr_vpc=192.168.0.0/16
 development.cidr_a_public=192.168.32.0/19
 development.cidr_a_private=192.168.128.0/19
@@ -7,6 +8,7 @@ development.cidr_b_private=192.168.160.0/19
 development.cidr_c_public=192.168.0.0/19
 development.cidr_c_private=192.168.96.0/19
 production.cluster_name=k8s-demo-production
+production.ssh_key_pair_name=k8s-demo-production-key
 production.cidr_vpc=10.10.0.0/16
 production.cidr_a_public=10.10.32.0/19
 production.cidr_a_private=10.10.128.0/19
