work in progress

--- a/default.properties
+++ b/default.properties
@@ -1,12 +1,11 @@
-development.cluster_name=k8s-demo-development
-development.ssh_key_pair_name=k8s-demo-development-key
-development.cidr_vpc=192.168.0.0/16
-development.cidr_a_public=192.168.32.0/19
-development.cidr_a_private=192.168.128.0/19
-development.cidr_b_public=192.168.64.0/19
-development.cidr_b_private=192.168.160.0/19
-development.cidr_c_public=192.168.0.0/19
-development.cidr_c_private=192.168.96.0/19
+#development.ssh_key_pair_name=k8s-demo-development-key
+#development.cidr_vpc=192.168.0.0/16
+#development.cidr_a_public=192.168.32.0/19
+#development.cidr_a_private=192.168.128.0/19
+#development.cidr_b_public=192.168.64.0/19
+#development.cidr_b_private=192.168.160.0/19
+#development.cidr_c_public=192.168.0.0/19
+#development.cidr_c_private=192.168.96.0/19
 production.cluster_name=k8s-demo-production
 production.ssh_key_pair_name=k8s-demo-production-key
 production.cidr_vpc=10.10.0.0/16
@@ -16,3 +15,19 @@ production.cidr_b_public=10.10.64.0/19
 production.cidr_b_private=10.10.160.0/19
 production.cidr_c_public=10.10.0.0/19
 production.cidr_c_private=10.10.96.0/19
+
+
+development.cluster_name=k8s-demo-development
+development.cidr_vpc=192.168.0.0/16
+development.subnet_01_block=192.168.64.0/18
+development.subnet_02_block=192.168.128.0/18
+development.subnet_03_block=192.168.192.0/18
+development.eks_version=1.11
+development.ssh_key_pair_name=k8s-demo-development-key
+development.node_instance_type=t2.medium
+development.node_autoscaling_group_min_size=3
+development.node_autoscaling_group_max_size=5
+development.node_autoscaling_group_desired_capacity=3
+development.node_volume_size=20
+development.bootstrap_arguments=''
+development.node_group_name=k8s-demo-development-nodes
